--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-Flask
+chromedriver-autoinstaller
+Flask==2.3.4
+selenium==5.9.1
+twilio==8.13.3
+apscheduler==3.10.5
 gunicorn
 apscheduler
-selenium
-twilio
-chromedriver-autoinstaller
 
