Fix Flask version for Railway

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-chromedriver-autoinstaller
-Flask==2.3.4
-selenium==5.9.1
-twilio==8.13.3
-apscheduler==3.10.5
-gunicorn
+Flask>=2.3.3,<2.4.0
+selenium>=4.10.0
+apscheduler>=3.10.0
+twilio>=8.0.0
+chromedriver-autoinstaller>=0.6.4
 apscheduler
 
